update nginx config

--- a/deploy-apps/server-home/index.html
+++ b/deploy-apps/server-home/index.html
@@ -1,9 +1,58 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>ayerble</title>
+    <style>
+      /* minimal: prefer Apple system font where available */
+      body {
+        font-family:
+          -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+          Arial, sans-serif;
+        margin: 2rem;
+        color: #111;
+        background: #fff;
+      }
+      a {
+        color: #0366d6;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>ayerble</h1>
+      <p>Personal pages and projects.</p>
+    </header>
+
+    <nav>
+      <ul>
+        <li>
+          <a href="https://aaronwilliampo.com" target="_blank" rel="noopener"
+            >aaronwilliampo.com</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://git.aaronwilliampo.com"
+            target="_blank"
+            rel="noopener"
+            >git.aaronwilliampo.com</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://yerb-engine.aaronwilliampo.com"
+            target="_blank"
+            rel="noopener"
+            >yerb-engine.aaronwilliampo.com</a
+          >
+        </li>
+      </ul>
+    </nav>
+
+    <footer>
+      <p><small>&copy; 2026 ayerble</small></p>
+    </footer>
+  </body>
 </html>
